@@ -2,6 +2,8 @@ package be.gerard.starter.service;
 
 import be.gerard.starter.model.Allergy;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 /**
@@ -12,7 +14,7 @@ import java.util.Set;
  */
 public class AllergyService {
 
-    private static final Set<Allergy> ALLERGIES = Set.of(
+    private static final Set<Allergy> ALLERGIES = new HashSet<>(Arrays.asList(
             Allergy.of("Eggs"),
             Allergy.of("Milk"),
             Allergy.of("Peanuts"),
@@ -21,6 +23,6 @@ public class AllergyService {
             Allergy.of("Shellfish"),
             Allergy.of("Wheat"),
             Allergy.of("Soy")
-    );
+    ));
 
 }
