@@ -7,6 +7,7 @@ import reactor.core.publisher.Flux;
 import reactor.util.function.Tuple2;
 
 import java.time.Duration;
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -18,7 +19,7 @@ import java.util.List;
 @Service
 public class GuestService {
 
-    private static final List<Guest> GUESTS = List.of(
+    private static final List<Guest> GUESTS = Arrays.asList(
             Guest.builder()
                     .fullName(FullName.builder()
                             .firstName("James")
